Fix horizontal scrollbar issue by removing min-width

--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -37,7 +37,7 @@ Main page styles - Modern Animated Dashboard
 
 .home {
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
   background: linear-gradient(-45deg, #667eea, #764ba2, #f093fb, #4facfe);
   background-size: 400% 400%;
   padding-bottom: 50px;
